# Tune_Trace_backend

./: .gitignore  API_GUIDE.md  CHANGELOG.md  DEPLOYMENT.md  README.md  alembic.ini  api_models.py  db.py  dependencies.py  main.py  ml_engine.py  mock_request.json  mock_response.json  outline.md  pyproject.toml  repository.py  requirements.txt  services.py  tunetrace_report.tex  whitepaper.md
.github/workflows/: main_song-suggest-fasapi.yml
TuneTrace-Backend/: Get Liked Songs.bru  Get Suggestions.bru  Mock Session 10 Songs.bru  bruno.json
TuneTrace-Backend/environments/: Production.bru
alembic/: env.py  startup.txt
alembic/versions/: 999777df0f65_create_initial_tables.py  add_user_oauth_fields.py  fdd1cef30bfb_create_initial_database_tables.py
tests/: repro_issue_18.py  test_api.py  test_ml_engine.py  test_performance.py
utils/: metrics.py
