[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "screenscout"  
version = "0.1.0"
description = "Semantic Vector Search & RAG-Powered Recommendation Engine"
readme = "README.md"
authors = [
  { name = "Agrannya Singh", email = "your.email@example.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pinecone",
    "google-generativeai",
    "pydantic",
    "python-multipart",
    "httpx",
]
requires-python = ">=3.11"

[project.urls]
"Homepage" = "https://github.com/agrannya-singh/Sematic-Recommendation-Service"
"Bug Tracker" = "https://github.com/agrannya-singh/Sematic-Recommendation-Service/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "bruno*"]  
namespaces = false
